--- a/effectsize_example.Rmd
+++ b/effectsize_example.Rmd
@@ -5,7 +5,6 @@ bibliography: references.bib
 ---
 ```{r}
 library(tidyverse)
-library(broom)
 ```
 
 # What is effect size?
@@ -77,6 +76,7 @@ data %>%
 ## Simple effect size
 
 ```{r}
+library(broom) # for tidy()
 data_A <- (data %>% filter(Group == "A"))[[2]]
 data_B <- (data %>% filter(Group == "B"))[[2]]
 t_result <- tidy(t.test(data_A, data_B))
@@ -86,7 +86,6 @@ t_result # result in tabular format
 *Simple effect size:* The task completion time of the two groups differ by `r t_result$estimate` (95% confidence interval [`r t_result$conf.low`, `r t_result$conf.high`]) seconds.
 
 ```{r, fig.height=1, fig.width=3}
-library(broom)
 t_result %>% 
   ggplot(aes(x = 1, y = estimate, ymin = conf.low, ymax = conf.high)) +
   geom_pointrange() +
