Effect size: Porting content complete (comments are to be done)

--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Chat at 2017-05-10 08:06:20 -0600 
+%% Created for Chat at 2017-05-10 09:34:46 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Rosenthal1991a,
+	Author = {Rosenthal, Robert},
+	Date-Added = {2017-05-10 15:18:14 +0000},
+	Date-Modified = {2017-05-10 15:18:19 +0000},
+	Publisher = {Sage},
+	Title = {Meta-analytic procedures for social research},
+	Volume = {6},
+	Year = {1991}}
 
 @book{Cohen1988a,
 	Author = {Cohen, Jacob},
