--- a/references.bib
+++ b/references.bib
@@ -61,3 +61,21 @@
 	Title = {Statistical methods in psychology journals: Guidelines and explanations.},
 	Volume = {54},
 	Year = {1999}}
+	
+@book{APA2010,
+	title={The Publication manual of the APA (6th ed.)},
+	author={{APA}},
+	year={2010},
+	publisher={Washington, {DC}}
+}
+
+@article{baguley2009standardized,
+	title={Standardized or simple effect size: What should be reported?},
+	author={Baguley, Thom},
+	journal={British Journal of Psychology},
+	volume={100},
+	number={3},
+	pages={603--617},
+	year={2009},
+	publisher={Wiley Online Library}
+}
