--- a/references.bib
+++ b/references.bib
@@ -61,3 +61,32 @@
 	Title = {Statistical methods in psychology journals: Guidelines and explanations.},
 	Volume = {54},
 	Year = {1999}}
+	
+@article{Cummings2011,
+  author = {Cummings, Peter},
+  doi = {10.1001/archpediatrics.2011.97},
+  journal = {Archives of Pediatrics {\&} Adolescent Medicine},
+  mendeley-groups = {stats/effect sizes},
+  month = {jul},
+  number = {7},
+  pages = {592},
+  pmid = {21727271},
+  title = {{Arguments for and Against Standardized Mean Differences (Effect Sizes)}},
+  url = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve{\&}db=PubMed{\&}dopt=Citation{\&}list{\_}uids=21727271 http://archpedi.jamanetwork.com/article.aspx?doi=10.1001/archpediatrics.2011.97},
+  volume = {165},
+  year = {2011}
+}
+
+@incollection{Cohen1977,
+  author = {Cohen, Jacob},
+  booktitle = {Statistical Power Analysis for the Behavioral Sciences},
+  doi = {10.1016/B978-0-12-179060-8.50007-4},
+  edition = {Revised Ed},
+  mendeley-groups = {stats/effect sizes},
+  pages = {19--74},
+  publisher = {Academic Press},
+  title = {{The t Test for Means}},
+  url = {doi.org/10.1016/B978-0-12-179060-8.50007-4},
+  year = {1977}
+}
+
